--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "markdown-loader": "^4.0.0",
+    "marked": "^0.5.2",
     "react": "^16.6.3",
     "react-app-rewire-less": "^2.1.3",
     "react-app-rewired": "^1.6.2",
